<resources>
    <string name="app_name">Proshield</string>
    <string name="Correo">Correo</string>
    <string name="Contrasenia">Contraseña</string>
    <string name="Cargo">Cargo</string>
    <string name="Btniniciar">Iniciar</string>
    <string name="Registrar_usuario">Registrar usuario</string>
    <string name="Lista_trabajador">Lista de trabajadores</string>
    <string name="Perfil">Perfil</string>
    <string name="Mandar_correo">Mandar correo</string>
    <string name="LlamadaEmergencia">Llamada de emergencia</string>
    <string name="notificarCatastrofe">Subir emergencia</string>
    <string name="Vermapa">Ver mapa</string>
    <string name="Qr">Qr</string>
    <string name="ProShield">ProShield</string>
    <string name="RepetirContrasenia">Repetir contraseña</string>
    <string name="PoseeEnfermedad">¿Posee enfermedades?</string>
    <string name="Extintores">Extintores</string>
    <string name="Alarmas">Alarmas</string>
    <string name="LlamarC">Carabineros</string>
    <string name="LlamarB">Bomberos</string>
    <string name="LlamarA">Ambulancia</string> <!-- Aquí estaba el error -->
    <string name="Llamar">Llamar</string>
    <string name="Nombre">Nombre</string>
    <string name="Registrar">Registrar</string>
    <string name="Telefono">Telefono</string>
    <string name="Rcuenta">Recuperar cuenta</string>

    <!-- Opciones de alarmas -->
    <string-array name="alarmas_array">
        <item>Alarma 1</item>
        <item>Alarma 2</item>
        <item>Alarma 3</item>
    </string-array>

    <!-- Opciones de extintores -->
    <string-array name="extintores_array">
        <item>Extintor 1</item>
        <item>Extintor 2</item>
        <item>Extintor 3</item>
    </string-array>

    <!-- Opciones de cargos -->
    <string-array name="cargos">
        <item>Jefe</item>
        <item>Prevencionista</item>
        <item>Guardia de seguridad</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
